--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
 				</div>
 				<div class="col-sm-6">
 					<p>
-						contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+						<a href="contact@agencelapanthere.com" target="_blank" rel="noopener noreferrer">contact@agencelapanthere.com</a><br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 					</p>
 				</div>
 			</div>
@@ -140,25 +140,25 @@
 					<div class="flex social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" aria-label="Twitter" href="http://www.twitter.fr/">
+								<a class="social" aria-label="Twitter" href="http://www.twitter.fr/" target="_blank" rel="noopener noreferrer">
 									<span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" aria-label="Facebook" href="https://fr-fr.facebook.com">
+								<a class="social" aria-label="Facebook" href="https://fr-fr.facebook.com" target="_blank" rel="noopener noreferrer">
 									<span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" aria-label="Dribbble" href="https://dribbble.com">
+								<a class="social" aria-label="Dribbble" href="https://dribbble.com" target="_blank" rel="noopener noreferrer">
 									<span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" aria-label="instagram" href="https://www.instagram.com">
+								<a class="social" aria-label="instagram" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
 									<span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
